2019-06-01  6.9.10-48 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-48, GIT revision 14511:fbf846d4b:20190601

2019-05-26  6.9.10-47 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-47, GIT revision 14507:321f99ca6:20190526

2019-05-19  6.9.10-47 Cristy  <quetzlzacatenango@image...>
  * Support 16 and 32 bit tiled float TIFF images.
  * Text improvements to the internal SVG renderer.

2019-05-14  6.9.10-46 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-46, GIT revision 14492:fb2f64950:20190518

2019-05-14  6.9.10-46 Cristy  <quetzlzacatenango@image...>
  * Builds under MacOS X and FreeBSD works again.
  * Return HEIC images in the sRGB colorspace.

2019-05-12  6.9.10-45 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-45, GIT revision 14473:2116be83b:20190512

2019-05-06  6.9.10-45 Cristy  <quetzlzacatenango@image...>
  * Fixed a number of issues (reference
    https://imagemagick.org/discourse-server/viewforum.php?f=3).
  * Fixed a number of issues (reference
    https://github.com/ImageMagick/ImageMagick/issues).

2019-05-03  6.9.10-44 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-44, GIT revision 14449:d077c2e58:20190503

2019-05-03  6.9.10-44 Cristy  <quetzlzacatenango@image...>
  * Fixed a number of issues (reference
    https://imagemagick.org/discourse-server/viewforum.php?f=3).
  * Fixed a number of issues (reference
    https://github.com/ImageMagick/ImageMagick/issues).

2019-05-01  6.9.10-43 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-43, GIT revision 14444:1580c66ba:20190502

2019-05-01  6.9.10-43 Cristy  <quetzlzacatenango@image...>
  * Fixed a number of issues (reference
    https://imagemagick.org/discourse-server/viewforum.php?f=3).
  * Fixed a number of issues (reference
    https://github.com/ImageMagick/ImageMagick/issues).
